# ResearchPilot-MCP

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md
examples/: example_usage.py  mcp_tool_reference.py
src/: __init__.py  config.py  server.py
src/services/: citation_service.py  compare_service.py  paper_service.py  pdf_service.py  search_service.py  summary_service.py
src/tools/: citation_tools.py  compare_tools.py  paper_tools.py  pdf_tools.py  review_tools.py  search_tools.py  summary_tools.py
tests/: __init__.py  test_services.py
